add language service
